improve errors in kubejs recipe builder